--- a/i3/config
+++ b/i3/config
@@ -19,7 +19,7 @@ font pango:monospace 8
 floating_modifier $mod
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/.wallpaper.png
+exec --no-startup-id feh --bg-scale ~/.wallpaper.jpeg
 exec --no-startup-id xsettingsd &
 exec --no-startup-id compton -b
 
@@ -34,7 +34,7 @@ bindsym $mod+Shift+d exec dmenu_run
 bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
 
 # common apps keybinds
-bindsym $super+l exec i3lock -i ~/.wallpaper.png
+bindsym $mod+Shift+l exec i3lock -i ~/.wallpaper.jpeg
 
 # Print screen focused window
 bindsym Print exec scrot -u '%Y%m%d_%H%M%S.png' -e 'mv $f ~/Pictures/shots/'
