--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+set $alt Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -34,7 +35,7 @@ bindsym $mod+Shift+d exec dmenu_run
 bindsym $mod+d exec rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
 
 # common apps keybinds
-bindsym $mod+Shift+l exec i3lock -i ~/.wallpaper.jpeg
+bindsym $alt+l exec i3lock -i ~/.wallpaper.jpeg
 
 # Print screen focused window
 bindsym Print exec scrot -u '%Y%m%d_%H%M%S.png' -e 'mv $f ~/Pictures/shots/'
@@ -167,10 +168,6 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
     colors {
-            background  #2f343f
-            statusline  #2f343f
-            separator   #4b5262
-
             # colour of border, background, and text
             focused_workspace   #2f343f #bf616a #d8dee8
             active_workspace    #2f343f #2f343f #d8dee8
