--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ setw -g mouse on
 setw -g monitor-activity on
 
 bind-key v split-window -h
-bind-key s split-window -v
+bind-key c split-window -v
 
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
@@ -64,32 +64,58 @@ bind Space choose-buffer
 set -g default-terminal "screen-256color"
 
 # status bar theme
-set -g status-bg 'colour235'
-set -g message-command-fg 'colour222'
-set -g status-justify 'centre'
-set -g status-left-length '100'
-set -g status 'on'
-set -g pane-active-border-fg 'colour154'
-set -g message-bg 'colour238'
-set -g status-right-length '100'
-set -g status-right-attr 'none'
-set -g message-fg 'colour222'
-set -g message-command-bg 'colour238'
-set -g status-attr 'none'
-set -g pane-border-fg 'colour238'
-set -g status-left-attr 'none'
-setw -g window-status-fg 'colour121'
-setw -g window-status-attr 'none'
-setw -g window-status-activity-bg 'colour235'
-setw -g window-status-activity-attr 'none'
-setw -g window-status-activity-fg 'colour154'
-setw -g window-status-separator ''
-setw -g window-status-bg 'colour235'
 
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami)  #(uptime | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+# Status update interval
+set -g status-interval 1
 
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H %#[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #(rainbarf --battery --remaining --no-rgb)'
+# Basic status bar colors
+set -g status-style fg=colour240,bg=colour233
 
-setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+# Left side of status bar
+set -g status-left-style bg=colour233,fg=colour243
+set -g status-left-length 40
+set -g status-left "#[fg=colour232,bg=colour24,bold] #S #[fg=colour24,bg=colour240,nobold]#[fg=colour233,bg=colour240] #(whoami) #[fg=colour240,bg=colour235]#[fg=colour240,bg=colour235] #I:#P #[fg=colour235,bg=colour233,nobold]"
 
+# Right side of status bar
+set -g status-right-style bg=colour233,fg=colour243
+set -g status-right-length 150
+set -g status-right "#[fg=colour235,bg=colour233]#[fg=colour240,bg=colour235] %H:%M:%S #[fg=colour240,bg=colour235]#[fg=colour233,bg=colour240] %d-%b-%y #[fg=colour245,bg=colour240]#[fg=colour232,bg=colour245,bold] #H "
+
+# Window status
+set -g window-status-format " #I:#W#F "
+set -g window-status-current-format " #I:#W#F "
+
+# Current window status
+set -g window-status-current-style bg=colour24,fg=colour232
+
+# Window with activity status
+set -g window-status-activity-style bg=colour233,fg=colour31
+
+# Window separator
+set -g window-status-separator ""
+
+# Window status alignment
+set -g status-justify centre
+
+# Pane border
+set -g pane-border-style bg=default,fg=colour238
+
+# Active pane border
+set -g pane-active-border-style bg=default,fg=colour24
+
+# Pane number indicator
+set -g display-panes-colour colour233
+set -g display-panes-active-colour colour245
+
+# Clock mode
+set -g clock-mode-colour colour24
+set -g clock-mode-style 24
+
+# Message
+set -g message-style bg=colour24,fg=black
+
+# Command message
+set -g message-command-style bg=colour233,fg=black
+
+# Mode
+set -g mode-style bg=colour24,fg=colour231
